# moz-youtube-tool

./: Makefile  README.md  pyproject.toml
src/moz_youtube_tool/: cli.py
